--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -1,19 +1,34 @@
 
 .grid {
-	width: 80%;
-	height: 800px;
+	width: 75%;
+	// height: 800px;
 	margin: 0 auto;
+	.grid-sizer {
+		width: 1%;
+	}
+	.gutter-sizer {
+		width: 0%;
+	}
 	.grid-item { 
 		width: 40%;
 		height: 300px;
 		margin-bottom: 30px;
+		padding: 0 2.5%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		border: 1px solid black;
+		@media(max-width: 768px) {
+			width: 100%;
+		}
 	}
 	.grid-item--width2 { 
-		width: 55%; 
+		width: 60%; 
+		@media(max-width: 768px) {
+			width: 100%;
+		}
+	}
+	.grid-item--width3 {
+		width: 100%;
 	}
 	.highlight {
 		background: $accentColor;
