--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,14 +1,126 @@
 /* colors in variables */
 
+$mainBG: #F8F8FF; /*ghostwhite */
+$altBG: #F5F5F5; /* whitesmoke */
+$alt2BG: #DCDCDC; /* darkslategrey*/
+$fontColor: black;
+$accentColor: #5F9EA0;  
+$tomato: #FF6347; /*tomato*/
+$blue: #5F9EA0; /*cadetblue*/
+$secondBG: #F0F8FF;
+$snow: #FFFAFA;
+
 /* fonts */
 
 $titleFont: 'Raleway', serif;
 $parFont: 'Open Sans', sans-serif;
 $altFont: 'Merriweather', serif;
-$accentColor: teal;
 
+/* RESPONSIVENESS */
+$mobile: new-breakpoint(max-width 480px 12);
+$tablet: new-breakpoint(max-width 768px 12);
+
+/* size & color assignment */
+header {
+	background: $mainBG;
+	position: relative;
+	margin: 0;
+	&:after {
+		content: "";
+		// display:inline-block;
+		position: absolute;
+		bottom: -100px;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: 100px 500px 0 700px;
+		border-color: $mainBG transparent transparent transparent;
+		}	
+}
+	#about {
+		background: $altBG;
+		// position: relative;
+		// &:before {
+		// content: "";
+		// position: absolute;
+		// display: inline-block;
+		// top: -100px;
+		// width: 0;
+		// height: 0;
+		// border-style: solid;
+		// border-width: 100px 0 0 400px;
+		// border-color: transparent transparent transparent #009999;
+		// }
+		// &:before {
+		// content: "";
+		// position: absolute;
+		// display: inline-block;
+		// top: -100px;
+		// width: 0;
+		// height: 0;
+		// border-style: solid;
+		// border-width: 100px 400px 0 0;
+		// border-color: transparent transparent transparent #009999;
+		// }
+	}
+	#folio {
+		background: $mainBG;
+		position: relative;
+		&:before {
+		content: "";
+		// display:inline-block;
+		position: absolute;
+		top: -100px;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: 100px 750px 0 500px;
+		// @include calc(border-right-width, "100vw - 50%");
+		border-color: transparent transparent transparent $mainBG;
+		}
+		&:after {
+		content: "";
+		// display:inline-block;
+		position: absolute;
+		bottom: -100px;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: 100px 500px 0 740px;
+		// @include calc(border-right-width, "100vw - 50%");
+		border-color: $mainBG transparent transparent transparent;
+		}	
+	}
+	#blog {
+
+	}
+	#profile {
+
+	}
+footer {
+	background: $alt2BG;
+}
+aside {
+	background: $alt2BG;
+	li a {
+		color: $accentColor;
+		text-transform: uppercase;
+		font-size: 2rem;
+		transition: all .5s;
+		&:hover {
+			color: $fontColor;
+		}
+	}
+}
+
+/* FONT SIZING */
+
+body {
+	font-size: 62.5%;
+}
 h1, h2 {
 	font-family: $altFont;
+	margin-top: 0;
 }
 a {
 	color: #BA209B;
