--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -20,88 +20,156 @@ $altFont: 'Merriweather', serif;
 $mobile: new-breakpoint(max-width 480px 12);
 $tablet: new-breakpoint(max-width 768px 12);
 
+/*TRIANGLES */
+
+/*AFTER IS LEFT, BEFORE IS RIGHT */
+$triangle: 80px 0 0 865px;
+$triangleRev: 80px 400px 0 0;
+$triangleB: 80px 900px 0 0;
+$triangleBRev: 80px 0 0 400px;
+
 /* size & color assignment */
 header {
-	background: $mainBG;
+	@include background($mainBG, url('images/PAM_8797.jpg'));
+	background-size: cover;
+	background-position: right;
 	position: relative;
-	margin: 0;
 	&:after {
 		content: "";
-		// display:inline-block;
 		position: absolute;
-		bottom: -100px;
+		bottom: 0px;
+		left: 0;
 		width: 0;
 		height: 0;
 		border-style: solid;
-		border-width: 100px 500px 0 700px;
-		border-color: $mainBG transparent transparent transparent;
+		border-width: $triangle;
+		border-color: transparent transparent transparent $mainBG;
 		}	
 }
 	#about {
+		padding: 100px 0;
 		background: $altBG;
-		// position: relative;
-		// &:before {
-		// content: "";
-		// position: absolute;
-		// display: inline-block;
-		// top: -100px;
-		// width: 0;
-		// height: 0;
-		// border-style: solid;
-		// border-width: 100px 0 0 400px;
-		// border-color: transparent transparent transparent #009999;
-		// }
-		// &:before {
-		// content: "";
-		// position: absolute;
-		// display: inline-block;
-		// top: -100px;
-		// width: 0;
-		// height: 0;
-		// border-style: solid;
-		// border-width: 100px 400px 0 0;
-		// border-color: transparent transparent transparent #009999;
-		// }
+		position: relative;
+		&:before {
+		content: "";
+		position: absolute;
+		top: -80px;
+		right: 0;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangleRev;
+		border-color: transparent $mainBG transparent transparent;
+		}
+		&:after {
+		content: "";
+		position: absolute;
+		bottom: -80px;
+		z-index:1;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangleRev;
+		border-color: $accentColor transparent;
+		}
 	}
 	#folio {
 		background: $mainBG;
 		position: relative;
+		padding: 100px 0;
 		&:before {
 		content: "";
-		// display:inline-block;
 		position: absolute;
-		top: -100px;
+		top: 0px;
+		right: 0;
 		width: 0;
 		height: 0;
 		border-style: solid;
-		border-width: 100px 750px 0 500px;
-		// @include calc(border-right-width, "100vw - 50%");
-		border-color: transparent transparent transparent $mainBG;
+		border-width: $triangle;
+		border-color: $accentColor transparent;
 		}
 		&:after {
 		content: "";
-		// display:inline-block;
 		position: absolute;
-		bottom: -100px;
+		bottom: 0px;
 		width: 0;
 		height: 0;
 		border-style: solid;
-		border-width: 100px 500px 0 740px;
-		// @include calc(border-right-width, "100vw - 50%");
-		border-color: $mainBG transparent transparent transparent;
+		border-width: $triangle;
+		border-color: transparent $accentColor;
 		}	
 	}
 	#blog {
-
+		position: relative;
+		padding: 100px 0;
+		&:before {
+		content: "";
+		position: absolute;
+		top: -80px;
+		right: 0;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangleRev;
+		border-color: transparent $accentColor;
+		}
+		&:after {
+		content: "";
+		z-index:1;
+		position: absolute;
+		bottom: -80px;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangleRev;
+		border-color: $accentColor transparent;
+		}
 	}
 	#profile {
-
+		position: relative;
+		background: $mainBG;
+		padding: 200px 0;
+		&:before {
+		content: "";
+		position: absolute;
+		top: 0px;
+		right: 0;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangle;
+		border-color: $accentColor transparent;
+		}
+		&:after {
+		content: "";
+		position: absolute;
+		bottom: 0px;
+		left: 0;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangle;
+		border-color: transparent $accentColor;
+		}	
 	}
 footer {
+	padding: 20px 0;
+	position: relative;
 	background: $alt2BG;
+		&:before {
+		content: "";
+		position: absolute;
+		top: -80px;
+		right: 0;
+		width: 0;
+		height: 0;
+		border-style: solid;
+		border-width: $triangleRev;
+		border-color: transparent $accentColor;
+		}
 }
 aside {
-	background: $alt2BG;
+	background: rgba(0,0,0,0.5);
 	li a {
 		color: $accentColor;
 		text-transform: uppercase;
