--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,9 @@
 header {
-	height: 90vh;
+	height: 100vh;
 	width: 100%;
 	margin: 0;
+	background-size: cover;
+	// background-position: -25% 0;
 	.header__title {
 		height: 90vh;
 		width: 50%;
