--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -6,14 +6,20 @@
 	justify-content: center;
 	padding: 2% 0;
 	button {
-		border: none;
-		background: $accentColor;
+		border: 2px solid $accentColor;
+		background: none;
 		margin: 0 1%;
+		padding: 10px;
 		text-transform: uppercase;
+		transition: all 0.5s;
+		&:hover {
+			background: $darkBG;
+			color: $mainBG;
+		}
 	}
 }
 .grid {
-	width: 75%;
+	width: 80%;
 	margin: 0 auto;
 	@include media($mobile) {
 		width: 95%;
@@ -28,7 +34,7 @@
 		width: 40%;
 		height: 300px;
 		margin-bottom: 30px;
-		padding: 0 2.5%;
+		padding: 0 1%;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -37,9 +43,6 @@
 		}
 		@include media($mobile) {
 			// flex-direction: row;
-			position: relative;
-			display: block;
-			clear:both;
 		}
 	}
 	.grid-item--width2 { 
@@ -59,7 +62,7 @@
 		height: 100%;
 		background-size: cover;
 		@include media($mobile) {
-		}
+			}
 		}
 	.gridbottom {
 		height: 100%;
@@ -68,26 +71,30 @@
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: space-between;
-		background: $accentColor;
+		background: $darkBG;
+		color: $mainBG;
 		&__left {
-			text-transform: uppercase;
+			// text-transform: uppercase;
+			text-align: center;
 		}
-		@include media($mobile) {
+		&__center {
+			text-align: center;
 		}
 		.gridButton {
-			background: #333;
-			color: white;
+			background: none;
+			border: 2px solid $accentColor;
+			color: $mainBG;
 			text-align: center;
 			padding: 5px;
 			display: block;
-			margin: 10px;
-			@include media($mobile) {
-				width: 75%;
-				margin: 10px auto;
-				padding: 10px;
-				display: block;
+			margin: 5px;
+			transition: all 0.5s;
+			&:hover {
+				background: $mainBG;
+				color: $darkBG;
 			}
-
+			@include media($mobile) {
+			}
 			&__more {
 			}
 			&__see {
