--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -12,6 +12,7 @@ header {
 		flex-direction: row wrap;
 		justify-content: center;
 		align-items: center;
+		// text-transform: uppercase;
 		@include media($tablet) {
 			@include fill-parent();
 		}
@@ -22,13 +23,26 @@ header {
 		&--firstName {
 			font-family: $titleFont;
 			font-size: 3rem;
+			line-height: 1.3;
 			font-weight:300;
+			position: relative;
+				&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: -4px;
+		left: 0px;
+		height: 5px;
+		width: 50%;
+		border-bottom: 1px solid black;
+	}
 		}
 		&--surname {
 			font-family: $titleFont;
 			font-weight: 700;
 			text-align: left;
 			font-size: 2.1rem;
+			line-height: 1;
 		}
 		h1 {
 			padding: 0;
