--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,10 +1,27 @@
 .sidebar {
-	width: 25%;
+	width: 20%;
 	ul {
 		margin: 0;
 		padding: 0;
 		li {
 			list-style: none;
+		}
+		input[type=search] {
+			background: none;
+			padding: 5px;
+			border: 2px solid $accentColor;
+			margin-right: 2%;
+		}
+		input[type=submit] {
+			background: $alt2BG;
+			border: 2px solid $accentColor;
+			padding: 5px;
+			border-radius: 0;
+			transition: all 0.5s;
+			&:hover {
+				background: $darkBG;
+				color: $mainBG;
+			}
 		}
 	}
 }
