--- a/sass/_bloghome.scss
+++ b/sass/_bloghome.scss
@@ -3,6 +3,7 @@
 	background-size: cover;
 	background-attachment: fixed;
 	position: relative;
+	overflow: hidden;
 	&:after {
 		content: "";
 		position: absolute;
@@ -61,7 +62,11 @@ h2.entry-title {
 section#blogHome {
 	padding: 1% 0 5%;
 	position: relative;
+	overflow: hidden;
 	background: $mainBG;
+	@include media($mobile) {
+		padding: 0 0 20%;
+	}
 				&:before {
 			content: "";
 			position: absolute;
