--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -4,7 +4,7 @@ h2.fpTitle, h3.fpTitle {
 	text-align: center;
 	position: relative;
 	text-transform: uppercase;
-	@include media($mobile) {
+	@include media($tablet) {
 		width: 30%;
 	}
 	&:after {
@@ -16,10 +16,6 @@ h2.fpTitle, h3.fpTitle {
 		height: 5px;
 		width: 50%;
 		border-bottom: 1px solid black;
-	}
-	&__Inner {
-		width: 50%;
-		text-align: center;
 	}
 }
 #about {
@@ -49,6 +45,10 @@ ul.aboutIcons {
 	i {
 		font-size: 2rem;
 	}
+	p {
+		width: 50%;
+		text-align: center;
+	}
 }
 .aboutText {
 	width: 80%;
@@ -56,23 +56,32 @@ ul.aboutIcons {
 	padding: 2% 0;
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
 	@include media($tablet) {
 		flex-direction: column;
 	}
 }
 .aboutLeft {
-	width: 25%;
+	width: 40%;
+	padding: 0 1%;
 	font-weight: 700;
-	margin: 0 1%;
 	text-align: right;
+	border-right: 1px solid $darkBG;
 	@include media($tablet) {
 		width: 100%;
+		text-align: left;
 	}
 }
-.aboutRight, .aboutCenter {
-	width: 25%;
+.aboutCenter {
+	width: 60%;
 	margin: 0 1%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	p {
+		width: 50%;
+		padding: 0 1%;
+	}
 	@include media($tablet) {
 		width: 100%;
 	}
@@ -151,10 +160,10 @@ ul.workflowIcons {
 	justify-content: space-between;
 	li {
 		width: 20%;
+		padding: 1%;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: center;
-		align-items: center;
 	}
 	i {
 		font-size: 2rem;
