--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -6,6 +6,7 @@
 	justify-content: center;
 	padding: 2% 0;
 	button {
+		font-family: $titleFont;
 		border: 2px solid $accentColor;
 		background: none;
 		margin: 0 1%;
@@ -13,7 +14,7 @@
 		text-transform: uppercase;
 		transition: all 0.5s;
 		&:hover {
-			background: $darkBG;
+			background: $accentColor;
 			color: $mainBG;
 		}
 	}
@@ -38,11 +39,15 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		&__short {
+			flex-direction: column;
+			justify-content: center;
+			@include media($tablet) {
+				flex-direction: row;
+			}
+		}
 		@include media($tablet) {
 			width: 100%;
-		}
-		@include media($mobile) {
-			// flex-direction: row;
 		}
 	}
 	.grid-item--width2 { 
@@ -61,9 +66,15 @@
 		width: 70%;
 		height: 100%;
 		background-size: cover;
-		@include media($mobile) {
+		&__short {
+			width: 100%;
+			height: 50%;
+			@include media($tablet) {
+				width: 70%;
+				height: 100%;
 			}
 		}
+	}
 	.gridbottom {
 		height: 100%;
 		width: 30%;
@@ -71,21 +82,43 @@
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: space-between;
-		background: $darkBG;
+		background: $accentColor;
 		color: $mainBG;
+		&__short {
+			height: 50%;
+			width: 100%;
+			@include media($tablet) {
+				height: 100%;
+				width: 30%;
+			}
+
+		}
 		&__left {
-			// text-transform: uppercase;
+			text-transform: uppercase;
 			text-align: center;
+			font-family: $titleFont;
+			padding: 5px;
 		}
 		&__center {
 			text-align: center;
 		}
+		&__right {
+			text-transform: uppercase;
+			&--short {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				@include media($tablet) {
+					flex-direction: column;
+				}
+			}
+		}
 		.gridButton {
 			background: none;
-			border: 2px solid $accentColor;
+			border: 2px solid $mainBG;
 			color: $mainBG;
 			text-align: center;
-			padding: 5px;
+			padding: 10px;
 			display: block;
 			margin: 5px;
 			transition: all 0.5s;
@@ -93,19 +126,14 @@
 				background: $mainBG;
 				color: $darkBG;
 			}
-			@include media($mobile) {
-			}
-			&__more {
-			}
-			&__see {
-			}
+		}
+		a {
+			font-family: $titleFont;
 		}
 		p {
+			font-family: $titleFont;
 			margin: 0;
 			padding: 5px;
-			@include media($mobile) {
-				padding: 10px;
-			}
 		}
 	}
 
