--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,11 +1,23 @@
-header {
-	height: 100vh;
+#mainHeader {
+	// height: 100vh;
 	width: 100%;
-	margin: 0;
-	background-size: cover;
-	// background-position: -25% 0;
+	padding: 4% 0;
+	.header__arrow {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		@include media($tablet) {
+			margin: 0 0 10%;
+		}
+		a {
+			cursor: pointer;
+			display: block;
+			padding: 10px;
+		}
+	}
 	.header__title {
-		height: 90vh;
+		margin: 25% 0 10%;
 		width: 50%;
 		text-align:center;
 		display: flex;
@@ -15,13 +27,12 @@ header {
 		// text-transform: uppercase;
 		@include media($tablet) {
 			@include fill-parent();
-		}
-
-		&--box {
-			margin-top: 30%;
+			margin: 30% 0 10%;
 		}
 		&--firstName {
+			display:block;
 			font-family: $titleFont;
+			padding-top: 2px;
 			font-size: 3rem;
 			line-height: 1.3;
 			font-weight:300;
@@ -30,23 +41,20 @@ header {
 		content: '';
 		display: block;
 		position: absolute;
-		top: -4px;
+		top: 0px;
 		left: 0px;
-		height: 5px;
-		width: 50%;
+		height: 1px;
+		width: 25%;
 		border-bottom: 1px solid black;
-	}
 		}
+	}
 		&--surname {
+			display:block;
 			font-family: $titleFont;
 			font-weight: 700;
 			text-align: left;
-			font-size: 2.1rem;
+			font-size: 2rem;
 			line-height: 1;
-		}
-		h1 {
-			padding: 0;
-			margin: 0;
 		}
 	}
 }
