--- a/sass/_singleport.scss
+++ b/sass/_singleport.scss
@@ -1,9 +1,8 @@
-#blogHeader {
+#elseHeader {
 	height: 50vh;
-	background-size: cover;
-	background-attachment: fixed;
 	position: relative;
-	overflow: hidden;
+	background-attachment: fixed;
+	background-size: cover;
 	&:after {
 		content: "";
 		position: absolute;
@@ -32,64 +31,19 @@
 			border-width: $triangleBRev;
 		}
 	}
-	.header__title {
-		margin: 10% 0;
-		width: 50%;
-		text-align:center;
-		display: flex;
-		flex-direction: row wrap;
-		justify-content: center;
-		align-items: center;
-		@include media($tablet) {
-			@include fill-parent();
-			margin: 30% 0 10%;
-		}
-		&--firstName {
-			display:block;
-			font-family: $titleFont;
-			padding-top: 2px;
-			font-size: 3rem;
-			line-height: 1.3;
-			font-weight:300;
-			position: relative;
-			&:after {
-				content: '';
-				display: block;
-				position: absolute;
-				top: 0px;
-				left: 0px;
-				height: 1px;
-				width: 25%;
-				border-bottom: 1px solid black;
-			}
-		}
-	}
 }
-h2.entry-title {
-	position: relative;
-		&:after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		height: 1px;
-		width: 10%;
-		border-bottom: 1px solid black;
-	}
+.wrapper__portItem {
+	display: flex;
+	flex-direction: row;
 }
-section#blogHome {
-	padding: 1% 0 5%;
+.portfolioSItem {
 	position: relative;
+	padding: 0 0 4%;
 	background: $mainBG;
-	overflow:hidden;
-	@include media($tablet) {
-		padding: 0 0 20%;
-	}
-			&:before {
+				&:before {
 			content: "";
 			position: absolute;
-			bottom: 0px;
+			bottom: -15px;
 			right: 0;
 			width: 0;
 			height: 0;
@@ -104,7 +58,7 @@ section#blogHome {
 			content: "";
 			z-index:1;
 			position: absolute;
-			bottom: 0px;
+			bottom: -15px;
 			width: 0;
 			left: 0;
 			height: 0;
@@ -115,15 +69,24 @@ section#blogHome {
 				border-width: $triangleB;
 			}
 		}
+	&__container {
+		width: 80%;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+	&__sidebar {
+		width: 20%;
+	}
+	&__image {
+		width: 50%;
+	}
 }
-.blogWrapper {
-	max-width: 1080px;
-	margin: 0 auto;
+#nav-below {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-
-}
-.blogHome {
-	width: 80%;
 }
