--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -70,6 +70,8 @@ ul.aboutIcons {
 	@include media($tablet) {
 		width: 100%;
 		text-align: left;
+		border-bottom: 1px solid $darkBG;
+		border-right: none;
 	}
 }
 .aboutCenter {
