--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 div.wpcf7 {
 	margin: 0 auto;
