--- a/sass/_singleport.scss
+++ b/sass/_singleport.scss
@@ -80,7 +80,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-		align-items: center;
+		// align-items: center;
 		@include media($tablet) {
 			width: 70%;
 		}
@@ -99,6 +99,7 @@
 			width: 50%;
 			text-align: center;
 			padding: 10px;
+			margin: 10px auto;
 			border: 2px solid $accentColor;
 			text-transform: uppercase;
 			background: none;
