--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -32,14 +32,14 @@ $triangleBRev: 80px 300px 0 0;
 
 /* FONT VARIABLES */
 $p-font-sizes: (
-	null: 0.8rem,
-  480px : 0.6rem,
-  768px	: 0.7rem
+	null: 1rem,
+  480px : 0.7rem,
+  768px	: 0.8rem
 );
 $h1-font-sizes: (
-	null: 2.4rem,
-	480px: 2rem,
-	768px: 2.2rem
+	null: 2.6rem,
+	480px: 2.2rem,
+	768px: 2.4rem
 	);
 $h2-font-sizes: (
 	null: 1.8rem,
@@ -52,9 +52,14 @@ $h3-font-sizes: (
 	768px	: 0.8rem
 	);
 $h4-font-sizes: (
-	null: 1.4rem,
-	480px: 0.8rem,
-	768: 1.2rem
+	null: 1rem,
+	480px: 0.7rem,
+	768: 0.8rem
+	);
+$grid-font-sizes: (
+	null: 0.7rem,
+	480px: 0.6rem,
+	768px: 0.6rem
 	);
 
 @mixin font-size($fs-map) {
@@ -86,15 +91,19 @@ h3 {
 h4 {
 	font-size: 12px;
 	@include font-size($h4-font-sizes);
+	line-height: 1.4;
 }
 p {
 	font-size: 12px;
 	@include font-size($p-font-sizes);
-	line-height: 1.2;
+	line-height: 1.3;
 	font-family: $parFont;
 }
 button {
 	@include font-size($p-font-sizes);
+}
+.grid p, .grid a, .button-group button {
+	@include font-size($grid-font-sizes);
 }
 
 /* size & color assignment */
